Added WanServerCommands.swift - contains class smartlinkConfigure(tcpPort:udpPort:callback:)
AppExtensions.swift - changed all Bool extensions from function to var
AppExtensions.swift - changed Int extension: hzToMHz from function to var
AppExtensions.swift - changed String extensions: mhzToHz, iValue, bValue, fValue, tValue, dValue from func to var



v2.2.1

Profile.swift - refactored profiles to be a dynamic model rather than a static one
ProfileCommands.swift - changed delete(_:name:callback:) to a class func
ProfileCommands.swift - changed save(_:name:callback:) to a class func
Radio.swift - in parseStatus(_:), in .profile changed parseProperties to parseStatus
Notifications.swift - removed all profile related notifications, add .profileHasBeenAdded & .profileWillBeRemoved
Profile.swift - changed "list' to be get-only
Radio.swift - changed _filterCwAutoLevel, _filterVoiceAutoLevel, _filterDigitalAutoLevel from Int to Bool
Radio.swift - changed _filter--AutoLevel to _filter--AutoEnabled
RadioCommands.swift - changed filter--AutoLevel to filter--AutoEnabled
Radio.swift - corrected parseFilterProperties(_:), removed -- = false from .level case
RadioCommands.swift - added class calibrate(callback:)
Radio.swift - changed _startOffset to _startCalibration
RadioCommands.swift - changed startOffset to startCalibration, corrected setter
Radio.swift - changed _calFreq to be in Hz (not MHz)
ProfileCommands.swift - corrected profileCmd(_:) and var selection
RadioCommands.swift - renamed radioStaticCmd(_:_:_:) to staticNetParamsSet(callback:)
TcpManager.swift - protected var _isWan from potential race condition

v2.1.1

Panadapter.swift - commented out xPixel & yPixel code in parseProperties(_:)
Meter.swift - corrected log message in streamHandler(_:)
SliceCommands.swift - corrected error in "@objc dynamic public var audioPan: Int"
Radio.swift - refactored vitaParser(_:) to eliminate unwrapped optional error on shutdown